--- a/navigation.yaml
+++ b/navigation.yaml
@@ -37,7 +37,6 @@ tabs:
           - "developers/smart-contracts/verifier-contracts"
 
       - group: "Dev Tooling"
-        icon: "code"
         pages:
           - "developers/tooling/sdk"
           - "developers/tooling/cli"
@@ -57,7 +56,7 @@ tabs:
 
   - tab: "Prove"
     groups:
-      - group: "Getting Started"
+      - group: " "
         pages:
           - "provers/quick-start"
 
