try out mint theme, navbar search in middle

--- a/navigation.yaml
+++ b/navigation.yaml
@@ -1,7 +1,7 @@
 tabs:
   - tab: "Build"
     groups:
-      - group: "Introduction"
+      - group: " "
         pages:
           - "developers/what"
           - "developers/why"
