--- a/navigation.yaml
+++ b/navigation.yaml
@@ -1,4 +1,9 @@
 tabs:
+  - tab: "Home"
+    groups:
+      - group: " "
+        pages:
+          - "/"
   - tab: "Build"
     groups:
       - group: " "
